[package]
name = "markdown_previewer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"  # Use the latest release candidate
pulldown-cmark = "0.9"  # Markdown to HTML parser
serde = { version = "1.0", features = ["derive"] }  # for JSON serialization and deserialization
serde_json = "1.0"  # JSON support (may not be necessary if you're using Rocket's built-in JSON)